variables.RunHalf.scala.error
Compilation error:
RunHalf:1: error: not found: value int
int nbBaggle = 0;
^RunHalf:2: error: not found: value int
int nbOrangeCells = 0;
^RunHalf:3: error: not found: value nbBaggle
while((2*nbBaggle != nbOrangeCells+1) && nbBaggle !=0){
         ^RunHalf:3: error: not found: value nbOrangeCells
while((2*nbBaggle != nbOrangeCells+1) && nbBaggle !=0){
                     ^RunHalf:3: error: not found: value nbBaggle
while((2*nbBaggle != nbOrangeCells+1) && nbBaggle !=0){
                                         ^RunHalf:6: error: not found: value nbBaggle
    nbBaggle++;
    ^RunHalf:9: error: not found: value nbOrangeCells
    nbOrangeCells++;
    ^