variables.RunHalf.scala.code
int nbBaggle = 0;
int nbOrangeCells = 0;
while((2*nbBaggle != nbOrangeCells+1) && nbBaggle !=0){
  forward();
  if(isOverBaggle()){
    nbBaggle++;
  }
  if(isOverOrange()){
    nbOrangeCells++;
  }
}